# openapi-docs

./: .gitignore  404.html  CNAME  changes-v1-to-v2.html  changes-v2-to-v3.html  index.html  mkdocs.yml  openapi.json  pyproject.toml  readme.md  requirements.txt  sitemap.xml
.claude/: settings.local.json
.github/workflows/: ci.yml
amazon-index/: index.html
amazondsp-index/: index.html
css/: custom.css
docs/: amazon-index.md  changes-v1-to-v2.md  changes-v2-to-v3.md  index.md  instance-project.md  shopify-index.md  sqlserver_readme.md
docs/files/: token.json
docs/tutorial/: about-subscription.md  about-tokens.md  auth-authorization.md  auth-dandling-with-refresh-token.md  auth-first_access.md  auth-index.md  auth-refresh-token-details.md  auth-subscriber.md  batch-process.md  index.md  intro.md  openapi-postman.md  openapi-spec.md  portal-api-code.md  portal-api.md  tokens-v1.md  tokens-v2.md  tokens-v3.md  updating-tokens.md
google-index/: index.html
googlemerchant-index/: index.html
instacart-index/: index.html
instance-project/: index.html
python/tokens/: access_token_consumer.py  database.py
search/: search_index.js  search_index.json
shopify-index/: index.html
spec/: amazon.yaml
sqlserver_readme/: index.html
tutorial/: about-subscription.html  about-tokens.html  auth-subscriber.html  batch-process.html  index.html  intro.html  openapi-postman.html  openapi-spec.html  portal-api-code.html  portal-api.html  tokens-v1.html  tokens-v2.html  tokens-v3.html  updating-tokens.html
tutorial/auth-authorization/: index.html
(+20 files in other folders)
