[tool.poetry]
name = "documentation"
version = "0.1.0"
description = ""
authors = ["carlos.rian <carlos.rian@quartile.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs-material = "^7.2.1"
mkdocs-video = "^1.1.0"
markdown-include = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
