[tool.poetry]
name = "quartile-docs"
version = "0.1.0"
description = "Docs API Quartile"
authors = ["carlos.rian <carlos.rian@quartile.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
markdown-include = "^0.8.1"
mkdocs-material = "^9.0.12"
mkdocs-video = "^1.4.0"
mkdocs-glightbox = "^0.3.1"

[tool.poetry.group.dev.dependencies]
pysqlx-engine = "^0.2.17"
httpx = "^0.24.0"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]

requires = ["poetry-core>=1.0.0", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
